# TinyUi

./: .gitignore  .gitmodules  .qmllint.ini  .qmlls.ini  CHANGELOG.md  PROPOSAL_settings_expansion.md  README.md  TinyUi.spec  build.py  build_release.py  lint_helper.py  pyproject.toml  pyrightconfig.json  resources.qrc  run.py
.github/workflows/: build-release.yml  build.yml
.zed/: settings.json  tasks.json
assets/themes/: light.toml
docs/: CHANGELOG.md  ROADMAP.md  UML-config-idea.md  changelog.md  changelog.txt  lmu-connector-design.md  modular-plugin-architecture-v2.md  modular-plugin-architecture.md  planning.md  plugin-architecture.md  restructure-plan.md  runtime-architecture.md  unreleased_changelog.md  widget-system.md  widget-text-design.md
docs/internal/: tinyqt_feature_package_template.md
qml/TinyDevTools/: plugins.qmltypes  qmldir
qml/TinyUI/: plugins.qmltypes  qmldir
qml/TinyWidgets/: plugins.qmltypes  qmldir
scripts/: build.py  build_assets.py  build_icon.py  build_plugin.py  build_ui_icons.py  clean_pycache.py  compile_qrc.py  count_package_lines.py  devtools_smoke.py  diagnostics.py  fix_banner.py  launch_smoke.py  packaged_smoke.py  prepare_release.py  preview_release_notes.py  qml_probe.py  qmllint.py  release.py  release_notes.py  settings_native_smoke.py  settings_smoke.py  smoke_packaged_demo.py  widget_preview.py
scripts/internal/: devtools_lazy_smoke.py  qml_probe.py  settings_shape_probe.py
src/: boot.py  bootv2.py  resources_rc.py  tinyui_boot.py
src/app/: __init__.py  bootstrap.py  main.py
src/app_api/: host_actions.py  host_runtime.py  inspector.py  menu.py  provider_hub.py  qt.py  statusbar.py  tabs.py  theme.py  window.py
src/app_schema/: __init__.py  connector.py  manifest.py  overlay.py  plugin.py  ui.py
src/capabilities/: __init__.py  config_set_read.py  config_set_write.py  connector_actions.py  connector_read.py  menu.py  plugin_read.py  plugin_selection.py  plugin_state_read.py  plugin_state_write.py  settings_read.py  settings_write.py  statusbar.py  tabs.py  widget_config_read.py  widget_config_write.py  widget_preview.py  widget_read.py  widget_visibility_read.py  widget_visibility_write.py  window_capabilities.py  window_read.py
src/pkg_runtime_host/: __init__.py  contracts.py  manifest_lock.py  mount.py
src/plugins/: __init__.py
src/poc/: app_state.py  main.py
src/qml_app/: AppStatusBar.qml  AppStyledTabBar.qml  AppWindowMenuBar.qml  SettingsDialogWindow.qml  TinyUiMain.qml  TinyUiSettingsWindow.qml
src/qml_poc/: app_state.py  icons.py  log.py  main.py  theme.py
src/runtime/: app_identity.py  app_paths.py  events.py  manifest.py  menu.py  persistence.py  plugin_context.py  plugin_lifecycle.py  plugin_state.py  provider_registry.py  runtime.py  statusbar.py  tabs.py
src/runtimeV2/: __init__.py  domains.py  globals.py  register_capabilities.py  register_domain.py  register_domains.py  register_events.py  register_globals.py  runtime.py  shutdown.py  startup.py
src/runtime_schema/: __init__.py  connector_service.py  context.py  events.py  menu.py  plugin.py  provider.py  (+3 more)
tinyui/: __init__.py  const_tinyui.py  core_loader.py  main.py  version.py
(+1226 files in other folders)
