[project]
name = "TinyUi"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "psutil>=6.1",
]

[project.scripts]
tinyui = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tinyui/tests", "src/tinycore/tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

# ── TinyUi dev-instellingen ───────────────────────────────────────────────────
# categories: menu | settings | state | mouse | win32 | theme | ui | connector | connector_polling | all
# Prioriteit: TINYUI_DEBUG env var > pyproject.toml > productie (geen debug)
[tool.tinyui.debug]
categories = "widget, overlay, connector"
