[project]
name = "TinyUi"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "psutil>=6.1",
]

[project.scripts]
tinyui = "tinyui_boot:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tinyui/tests", "src/tinycore/tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

# ── TinyUI debug settings ─────────────────────────────────────────────────────
# categories:    connector | menu | mouse | overlay | settings | ui | widget | all
#                Leave empty to start silent; toggle categories in Dev Tools.
# console_level: minimum level shown in the terminal (PowerShell / bash).
#                DEBUG | INFO | WARNING | ERROR
#                Omit to suppress all terminal output (Dev Tools still works).
[tool.tinyui.debug]
categories    = "all"
console_level = "INFO"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["src", "scripts"]
exclude = [
    "**/.git",
    "**/__pycache__",
    ".venv",
    ".pytest_cache",
    "data",
    "dist",
]
