[project]
name = "TinyUi"
version = "0.5.0"
requires-python = ">=3.14"
dependencies = [
    "PySide6==6.10.2",
    "psutil==7.2.2",
    "toml==0.10.2",
]

[project.scripts]
tinyui = "boot:main"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31",
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = [".", "src"]

[tool.setuptools.packages.find]
where = ["src"]

# ── TinyUI debug settings ─────────────────────────────────────────────────────
# categories:    connector | menu | mouse | overlay | settings | ui | widget | all
#                Leave empty to start silent; toggle categories in Dev Tools.
# console_level: minimum level shown in the terminal (PowerShell / bash).
#                DEBUG | INFO | WARNING | ERROR
#                Omit to suppress all terminal output (Dev Tools still works).
[tool.tinyui.debug]
categories    = "all"
console_level = "INFO"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src"]
exclude = [
    "**/.git",
    "**/__pycache__",
    ".venv",
    ".pytest_cache",
    "data",
    "dist",
]
